# Trajectory-Generation-In-Frenet-Frame

./: CMakeLists.txt  README.md
include/: utils.hpp
include/trajectory_frenet/: frenet_path.hpp  frenet_planner.hpp  planner_params.hpp  polynomial.hpp
src/: frenet_planner.cpp  main.cpp  polynomial.cpp  utils.cpp
